# Blockchain_Integration_AiWatch

./: LICENSE  README.md
BesuBlockchain/: NetworkSetup.sh  config.toml  docker-compose.yaml  genesis.json  ibftConfigFile.json
BesuBlockchain/Node1/data/: key  key.pub
BesuBlockchain/Node1/data/database/: 000484.sst  000633.sst  000634.sst  IDENTITY  LOG  LOG.old.1668002026808490  LOG.old.1668006079735442  LOG.old.1668006140146416  LOG.old.1668020414288185  LOG.old.1668020504046046  LOG.old.1668020555823191  LOG.old.1668020687418258  LOG.old.1668020953272694  LOG.old.1668021176418571  LOG.old.1668021205949702  LOG.old.1668021289047661  LOG.old.1668024441927787  LOG.old.1668029367831568  LOG.old.1668029463804780  LOG.old.1668029808834638  LOG.old.1668173907294130  LOG.old.1668342654715248  LOG.old.1668342965690700  LOG.old.1668343254064088  LOG.old.1668343345248973  LOG.old.1668343620737186  LOG.old.1668421709838621  LOG.old.1668427477484637  LOG.old.1668429830047821  LOG.old.1668430230254297  LOG.old.1668430344230120  LOG.old.1668431162404008  LOG.old.1668434902016502  LOG.old.1668435470393017  LOG.old.1668435498589966  LOG.old.1668435542037540  LOG.old.1668435597944030  LOG.old.1668435658534034  LOG.old.1668436708930173  LOG.old.1668453473749144  (+67 more)
BesuBlockchain/Node2/data/: key  key.pub
BesuBlockchain/Node2/data/database/: 000412.sst  000511.sst  000516.sst  000517.sst  IDENTITY  LOG  LOG.old.1668002038916268  LOG.old.1668006093476489  LOG.old.1668006153809171  LOG.old.1668020427358420  LOG.old.1668020518303600  LOG.old.1668020570052500  LOG.old.1668020701152464  LOG.old.1668020967611450  LOG.old.1668021219588334  LOG.old.1668021305719294  LOG.old.1668024456772706  LOG.old.1668029383684358  LOG.old.1668029477124634  LOG.old.1668029823671813  LOG.old.1668173949095805  LOG.old.1668342666909960  LOG.old.1668342977911940  LOG.old.1668343267013586  LOG.old.1668343357961992  LOG.old.1668343633784907  LOG.old.1668421721414287  LOG.old.1668427489850288  LOG.old.1668429843309801  LOG.old.1668430241957163  LOG.old.1668431177691301  LOG.old.1668435511870461  LOG.old.1668436721708089  LOG.old.1668453486579495  LOG.old.1668454485808004  LOG.old.1668457250074333  LOG.old.1668458525041275  LOG.old.1668458610803092  LOG.old.1668459289020872  LOG.old.1668459936639432  (+50 more)
BesuBlockchain/Node3/data/: key.pub
BesuBlockchain/Node3/data/database/: 000418.sst  000541.sst  000542.sst  IDENTITY  LOG  LOG.old.1668002039007071  LOG.old.1668006093736597  LOG.old.1668006153825176  LOG.old.1668020426658018  LOG.old.1668020518173929  LOG.old.1668020570207237  LOG.old.1668020700757373  LOG.old.1668020967244676  LOG.old.1668021219874793  LOG.old.1668021304911893  LOG.old.1668024455827415  LOG.old.1668029383543883  LOG.old.1668029477405023  LOG.old.1668029823628567  LOG.old.1668173949081903  LOG.old.1668342667358475  LOG.old.1668342977946669  LOG.old.1668343266060604  LOG.old.1668343358258002  LOG.old.1668343633905423  LOG.old.1668421721540102  LOG.old.1668427489837000  LOG.old.1668429843204978  LOG.old.1668430241619362  LOG.old.1668431177354540  LOG.old.1668435511333034  LOG.old.1668436721633013  LOG.old.1668453486301489  LOG.old.1668454485990220  LOG.old.1668457250023946  LOG.old.1668458525170950  LOG.old.1668458610296681  LOG.old.1668459290084056  LOG.old.1668459936460833  LOG.old.1668461904749127  (+52 more)
BesuBlockchain/networkFiles/keys/0xf09f5352848ba3ee8c42d0c04cdf0f853b56f077/: key
BesuBlockchain/nginx/: nginx.conf
Contracts/: Manager.sol  Storage.sol
DittoModule/: Ditto.js
DittoModule/Ditto_Module/: .env  Functions.py  abi.json
DittoModule/Ditto_node/: index.js  package-lock.json  package.json
TrackerModule/: CMakeLists.txt  Dockerfile  README.md  conf.conf  configuration_file.ini  main.cpp  requirements.txt
TrackerModule/Blockchain/: BlockchainLoader.cpp  BlockchainLoader.hpp
TrackerModule/Camera/: DepthCamera.cpp  DepthCamera.hpp
TrackerModule/Camera/RealSense/: RSFrame.hpp  RealsenseCamera.cpp  RealsenseCamera.hpp  RealsenseNetCamera.cpp  RealsenseNetCamera.hpp
TrackerModule/ImageGen/: OpenCVImgGen.hpp  RealSenseOpenCV.hpp
TrackerModule/Kafka/: KafkaJSONSend.hpp  KafkaManager.cpp  KafkaManager.hpp
TrackerModule/OpenPose/: OpenPoseCommandLine.hpp
TrackerModule/Output/: Skeleton.cpp  Skeleton.hpp
TrackerModule/Room/CoordinateMapping/: CoordinateMappingManager.hpp  UnityCoordinateMappingManager.cpp
TrackerModule/SystemInterface/: CLInput.cpp  CLInput.hpp  FileDeleter.cpp  FileDeleter.hpp  SystemExec.hpp
TrackerModule/Utilities/: SyncQueue.hpp
TrackerModule/blockchain_code/: .env  Contract.py  Hashing.py  Tracker_Module.py  abi.json
TrackerModule/blockchain_code/Connection/: Connection.py
TrackerModule/scripts/: README.md  build-and-run.sh
TrackerModule/scripts/docker/: create-image.sh  delete-all.sh  emergency-kill.sh  run-container.sh
